--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/nerd.png" type="image/x-icon" />
+    <title>Aftab Akhand - a web developer</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <img src="./assets/nerd.png" alt="logo" />
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Notes </a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="section-1">
+      <p>I'm Aftab .</p>
+      <p>a web developer.</p>
+      <img src="./assets/land.svg" alt="" />
+    </section>
+
+    <section class="section-2">
+      <img src="./assets/nerd.png" alt="pic" />
+      <h3>Hi.</h3>
+      <p>
+        I' m a web developer based in Pune, India. I am fond of designing and
+        developing websites, webapps, games with elegant UI.
+      </p>
+    </section>
+
+    <hr />
+
+    <section class="section-3">
+      <h2>What I can do.</h2>
+      <div class="dd-flex">
+        <img src="./assets/designer.jpg" alt="designer" />
+        <div>
+          <h3>Design what you want.</h3>
+          <p>
+            I like to keep it simple. My goals are to focus on typography,
+            content and conveying the message that you want to send.
+          </p>
+        </div>
+      </div>
+      <div class="dd-flex">
+        <div>
+          <h3>Develop what you need.</h3>
+          <p>
+            I'm a developer, so I know how to create your website to run across
+            devices using the latest technologies available.
+          </p>
+        </div>
+        <img src="./assets/developer.jpg" alt="developer" />
+      </div>
+    </section>
+
+    <hr />
+
+    <section class="section-4">
+      <h2>I can help.</h2>
+      <h3>I'm currently available for freelance work.</h3>
+      <p>
+        If you have a project that you want to get started, think you need my
+        help with something or just fancy saying hey, then get in touch.
+      </p>
+      <button>
+        <span class="material-symbols-outlined"> mail </span
+        ><span>MESSAGE ME</span>
+      </button>
+    </section>
+
+    <footer>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/aftabakhand24/">LinkedIn</a></li>
+        <li><a href="https://github.com/aftabdotorg">GitHub</a></li>
+        <li><a href="#">hire me</a></li>
+      </ul>
+      <p>&copy; 2023 Aftab Akhand. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
